# regex-eq

./: .pylintrc  LICENSE  README.md  dfa.py  main.py  nfa.py  regular.py  setup.cfg
.github/workflows/: ci.yml
src/regular/: __main__.py  dfa.py  nfa.py  regular.py
test/: test_regular.py
tests/: test_nfa.py  test_regular.py
