[metadata]
name = regex-eq-peppermintpatty5
version = 0.0.1
author = Andrew Kritzler
# author_email = author@example.com
description = A package for regular languages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peppermintpatty5/regex-eq
project_urls =
    Bug Tracker = https://github.com/peppermintpatty5/regex-eq/issues
# classifiers =
#     Programming Language :: Python :: 3
#     License :: OSI Approved :: MIT License
#     Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
